parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PORCENTAJE
    PUNTERO
    SXOR

Grammar

Rule 0     S' -> s
Rule 1     s -> ltag
Rule 2     ltag -> ltag tag linst
Rule 3     ltag -> tag linst
Rule 4     linst -> linst inst PCOMA
Rule 5     linst -> inst PCOMA
Rule 6     inst -> asignacion
Rule 7     inst -> iff
Rule 8     inst -> jump
Rule 9     inst -> printt
Rule 10    inst -> ext
Rule 11    inst -> uns
Rule 12    uns -> unset IZQPAR va DERPAR
Rule 13    asignacion -> var2 IGUAL exp
Rule 14    var2 -> VAR arr
Rule 15    var2 -> VAR
Rule 16    tag -> ID DP
Rule 17    tag -> main DP
Rule 18    jump -> goto ID
Rule 19    iff -> if IZQPAR exp DERPAR goto ID
Rule 20    printt -> print IZQPAR va DERPAR
Rule 21    ext -> exit
Rule 22    exp -> expa
Rule 23    exp -> expl
Rule 24    exp -> expra
Rule 25    exp -> expb
Rule 26    exp -> casteo
Rule 27    exp -> E
Rule 28    exp -> calls
Rule 29    casteo -> IZQPAR int DERPAR E
Rule 30    casteo -> IZQPAR float DERPAR E
Rule 31    casteo -> IZQPAR char DERPAR E
Rule 32    calls -> read IZQPAR DERPAR
Rule 33    calls -> array IZQPAR DERPAR
Rule 34    expl -> NOT E
Rule 35    expl -> E AND E
Rule 36    expl -> E OR E
Rule 37    expl -> E xor E
Rule 38    expra -> E DIGUAL E
Rule 39    expra -> E DESIGUAL E
Rule 40    expra -> E MAYORIGUAL E
Rule 41    expra -> E MENORIGUAL E
Rule 42    expra -> E MAYOR E
Rule 43    expra -> E MENOR E
Rule 44    expb -> BNOT E
Rule 45    expb -> E BAND E
Rule 46    expb -> E BOR E
Rule 47    expb -> E BXOR E
Rule 48    expb -> E BLEFT E
Rule 49    expb -> E BRIGHT E
Rule 50    expa -> E SUMA E
Rule 51    expa -> E RESTA E
Rule 52    expa -> E MULTI E
Rule 53    expa -> abs IZQPAR E DERPAR
Rule 54    expa -> E DIV E
Rule 55    E -> ent
Rule 56    E -> dou
Rule 57    E -> va
Rule 58    E -> str
Rule 59    E -> RESTA E
Rule 60    ent -> INTEGER
Rule 61    dou -> DOUBLE
Rule 62    str -> STR
Rule 63    va -> VAR arr
Rule 64    va -> VAR
Rule 65    arr -> arr IZQLLAVE E DERLLAVE
Rule 66    arr -> IZQLLAVE E DERLLAVE

Terminals, with rules where they appear

AND                  : 35
BAND                 : 45
BLEFT                : 48
BNOT                 : 44
BOR                  : 46
BRIGHT               : 49
BXOR                 : 47
DERLLAVE             : 65 66
DERPAR               : 12 19 20 29 30 31 32 33 53
DESIGUAL             : 39
DIGUAL               : 38
DIV                  : 54
DOUBLE               : 61
DP                   : 16 17
ID                   : 16 18 19
IGUAL                : 13
INTEGER              : 60
IZQLLAVE             : 65 66
IZQPAR               : 12 19 20 29 30 31 32 33 53
MAYOR                : 42
MAYORIGUAL           : 40
MENOR                : 43
MENORIGUAL           : 41
MULTI                : 52
NOT                  : 34
OR                   : 36
PCOMA                : 4 5
PORCENTAJE           : 
PUNTERO              : 
RESTA                : 51 59
STR                  : 62
SUMA                 : 50
SXOR                 : 
VAR                  : 14 15 63 64
abs                  : 53
array                : 33
char                 : 31
error                : 
exit                 : 21
float                : 30
goto                 : 18 19
if                   : 19
int                  : 29
main                 : 17
print                : 20
read                 : 32
unset                : 12
xor                  : 37

Nonterminals, with rules where they appear

E                    : 27 29 30 31 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 54 59 65 66
arr                  : 14 63 65
asignacion           : 6
calls                : 28
casteo               : 26
dou                  : 56
ent                  : 55
exp                  : 13 19
expa                 : 22
expb                 : 25
expl                 : 23
expra                : 24
ext                  : 10
iff                  : 7
inst                 : 4 5
jump                 : 8
linst                : 2 3 4
ltag                 : 1 2
printt               : 9
s                    : 0
str                  : 58
tag                  : 2 3
uns                  : 11
va                   : 12 20 57
var2                 : 13

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . ltag
    (2) ltag -> . ltag tag linst
    (3) ltag -> . tag linst
    (16) tag -> . ID DP
    (17) tag -> . main DP

    ID              shift and go to state 4
    main            shift and go to state 5

    s                              shift and go to state 1
    ltag                           shift and go to state 2
    tag                            shift and go to state 3

state 1

    (0) S' -> s .



state 2

    (1) s -> ltag .
    (2) ltag -> ltag . tag linst
    (16) tag -> . ID DP
    (17) tag -> . main DP

    $end            reduce using rule 1 (s -> ltag .)
    ID              shift and go to state 4
    main            shift and go to state 5

    tag                            shift and go to state 6

state 3

    (3) ltag -> tag . linst
    (4) linst -> . linst inst PCOMA
    (5) linst -> . inst PCOMA
    (6) inst -> . asignacion
    (7) inst -> . iff
    (8) inst -> . jump
    (9) inst -> . printt
    (10) inst -> . ext
    (11) inst -> . uns
    (13) asignacion -> . var2 IGUAL exp
    (19) iff -> . if IZQPAR exp DERPAR goto ID
    (18) jump -> . goto ID
    (20) printt -> . print IZQPAR va DERPAR
    (21) ext -> . exit
    (12) uns -> . unset IZQPAR va DERPAR
    (14) var2 -> . VAR arr
    (15) var2 -> . VAR

    if              shift and go to state 16
    goto            shift and go to state 17
    print           shift and go to state 18
    exit            shift and go to state 19
    unset           shift and go to state 20
    VAR             shift and go to state 21

    linst                          shift and go to state 7
    inst                           shift and go to state 8
    asignacion                     shift and go to state 9
    iff                            shift and go to state 10
    jump                           shift and go to state 11
    printt                         shift and go to state 12
    ext                            shift and go to state 13
    uns                            shift and go to state 14
    var2                           shift and go to state 15

state 4

    (16) tag -> ID . DP

    DP              shift and go to state 22


state 5

    (17) tag -> main . DP

    DP              shift and go to state 23


state 6

    (2) ltag -> ltag tag . linst
    (4) linst -> . linst inst PCOMA
    (5) linst -> . inst PCOMA
    (6) inst -> . asignacion
    (7) inst -> . iff
    (8) inst -> . jump
    (9) inst -> . printt
    (10) inst -> . ext
    (11) inst -> . uns
    (13) asignacion -> . var2 IGUAL exp
    (19) iff -> . if IZQPAR exp DERPAR goto ID
    (18) jump -> . goto ID
    (20) printt -> . print IZQPAR va DERPAR
    (21) ext -> . exit
    (12) uns -> . unset IZQPAR va DERPAR
    (14) var2 -> . VAR arr
    (15) var2 -> . VAR

    if              shift and go to state 16
    goto            shift and go to state 17
    print           shift and go to state 18
    exit            shift and go to state 19
    unset           shift and go to state 20
    VAR             shift and go to state 21

    linst                          shift and go to state 24
    inst                           shift and go to state 8
    asignacion                     shift and go to state 9
    iff                            shift and go to state 10
    jump                           shift and go to state 11
    printt                         shift and go to state 12
    ext                            shift and go to state 13
    uns                            shift and go to state 14
    var2                           shift and go to state 15

state 7

    (3) ltag -> tag linst .
    (4) linst -> linst . inst PCOMA
    (6) inst -> . asignacion
    (7) inst -> . iff
    (8) inst -> . jump
    (9) inst -> . printt
    (10) inst -> . ext
    (11) inst -> . uns
    (13) asignacion -> . var2 IGUAL exp
    (19) iff -> . if IZQPAR exp DERPAR goto ID
    (18) jump -> . goto ID
    (20) printt -> . print IZQPAR va DERPAR
    (21) ext -> . exit
    (12) uns -> . unset IZQPAR va DERPAR
    (14) var2 -> . VAR arr
    (15) var2 -> . VAR

    ID              reduce using rule 3 (ltag -> tag linst .)
    main            reduce using rule 3 (ltag -> tag linst .)
    $end            reduce using rule 3 (ltag -> tag linst .)
    if              shift and go to state 16
    goto            shift and go to state 17
    print           shift and go to state 18
    exit            shift and go to state 19
    unset           shift and go to state 20
    VAR             shift and go to state 21

    inst                           shift and go to state 25
    asignacion                     shift and go to state 9
    iff                            shift and go to state 10
    jump                           shift and go to state 11
    printt                         shift and go to state 12
    ext                            shift and go to state 13
    uns                            shift and go to state 14
    var2                           shift and go to state 15

state 8

    (5) linst -> inst . PCOMA

    PCOMA           shift and go to state 26


state 9

    (6) inst -> asignacion .

    PCOMA           reduce using rule 6 (inst -> asignacion .)


state 10

    (7) inst -> iff .

    PCOMA           reduce using rule 7 (inst -> iff .)


state 11

    (8) inst -> jump .

    PCOMA           reduce using rule 8 (inst -> jump .)


state 12

    (9) inst -> printt .

    PCOMA           reduce using rule 9 (inst -> printt .)


state 13

    (10) inst -> ext .

    PCOMA           reduce using rule 10 (inst -> ext .)


state 14

    (11) inst -> uns .

    PCOMA           reduce using rule 11 (inst -> uns .)


state 15

    (13) asignacion -> var2 . IGUAL exp

    IGUAL           shift and go to state 27


state 16

    (19) iff -> if . IZQPAR exp DERPAR goto ID

    IZQPAR          shift and go to state 28


state 17

    (18) jump -> goto . ID

    ID              shift and go to state 29


state 18

    (20) printt -> print . IZQPAR va DERPAR

    IZQPAR          shift and go to state 30


state 19

    (21) ext -> exit .

    PCOMA           reduce using rule 21 (ext -> exit .)


state 20

    (12) uns -> unset . IZQPAR va DERPAR

    IZQPAR          shift and go to state 31


state 21

    (14) var2 -> VAR . arr
    (15) var2 -> VAR .
    (65) arr -> . arr IZQLLAVE E DERLLAVE
    (66) arr -> . IZQLLAVE E DERLLAVE

    IGUAL           reduce using rule 15 (var2 -> VAR .)
    IZQLLAVE        shift and go to state 33

    arr                            shift and go to state 32

state 22

    (16) tag -> ID DP .

    if              reduce using rule 16 (tag -> ID DP .)
    goto            reduce using rule 16 (tag -> ID DP .)
    print           reduce using rule 16 (tag -> ID DP .)
    exit            reduce using rule 16 (tag -> ID DP .)
    unset           reduce using rule 16 (tag -> ID DP .)
    VAR             reduce using rule 16 (tag -> ID DP .)


state 23

    (17) tag -> main DP .

    if              reduce using rule 17 (tag -> main DP .)
    goto            reduce using rule 17 (tag -> main DP .)
    print           reduce using rule 17 (tag -> main DP .)
    exit            reduce using rule 17 (tag -> main DP .)
    unset           reduce using rule 17 (tag -> main DP .)
    VAR             reduce using rule 17 (tag -> main DP .)


state 24

    (2) ltag -> ltag tag linst .
    (4) linst -> linst . inst PCOMA
    (6) inst -> . asignacion
    (7) inst -> . iff
    (8) inst -> . jump
    (9) inst -> . printt
    (10) inst -> . ext
    (11) inst -> . uns
    (13) asignacion -> . var2 IGUAL exp
    (19) iff -> . if IZQPAR exp DERPAR goto ID
    (18) jump -> . goto ID
    (20) printt -> . print IZQPAR va DERPAR
    (21) ext -> . exit
    (12) uns -> . unset IZQPAR va DERPAR
    (14) var2 -> . VAR arr
    (15) var2 -> . VAR

    ID              reduce using rule 2 (ltag -> ltag tag linst .)
    main            reduce using rule 2 (ltag -> ltag tag linst .)
    $end            reduce using rule 2 (ltag -> ltag tag linst .)
    if              shift and go to state 16
    goto            shift and go to state 17
    print           shift and go to state 18
    exit            shift and go to state 19
    unset           shift and go to state 20
    VAR             shift and go to state 21

    inst                           shift and go to state 25
    asignacion                     shift and go to state 9
    iff                            shift and go to state 10
    jump                           shift and go to state 11
    printt                         shift and go to state 12
    ext                            shift and go to state 13
    uns                            shift and go to state 14
    var2                           shift and go to state 15

state 25

    (4) linst -> linst inst . PCOMA

    PCOMA           shift and go to state 34


state 26

    (5) linst -> inst PCOMA .

    if              reduce using rule 5 (linst -> inst PCOMA .)
    goto            reduce using rule 5 (linst -> inst PCOMA .)
    print           reduce using rule 5 (linst -> inst PCOMA .)
    exit            reduce using rule 5 (linst -> inst PCOMA .)
    unset           reduce using rule 5 (linst -> inst PCOMA .)
    VAR             reduce using rule 5 (linst -> inst PCOMA .)
    ID              reduce using rule 5 (linst -> inst PCOMA .)
    main            reduce using rule 5 (linst -> inst PCOMA .)
    $end            reduce using rule 5 (linst -> inst PCOMA .)


state 27

    (13) asignacion -> var2 IGUAL . exp
    (22) exp -> . expa
    (23) exp -> . expl
    (24) exp -> . expra
    (25) exp -> . expb
    (26) exp -> . casteo
    (27) exp -> . E
    (28) exp -> . calls
    (50) expa -> . E SUMA E
    (51) expa -> . E RESTA E
    (52) expa -> . E MULTI E
    (53) expa -> . abs IZQPAR E DERPAR
    (54) expa -> . E DIV E
    (34) expl -> . NOT E
    (35) expl -> . E AND E
    (36) expl -> . E OR E
    (37) expl -> . E xor E
    (38) expra -> . E DIGUAL E
    (39) expra -> . E DESIGUAL E
    (40) expra -> . E MAYORIGUAL E
    (41) expra -> . E MENORIGUAL E
    (42) expra -> . E MAYOR E
    (43) expra -> . E MENOR E
    (44) expb -> . BNOT E
    (45) expb -> . E BAND E
    (46) expb -> . E BOR E
    (47) expb -> . E BXOR E
    (48) expb -> . E BLEFT E
    (49) expb -> . E BRIGHT E
    (29) casteo -> . IZQPAR int DERPAR E
    (30) casteo -> . IZQPAR float DERPAR E
    (31) casteo -> . IZQPAR char DERPAR E
    (55) E -> . ent
    (56) E -> . dou
    (57) E -> . va
    (58) E -> . str
    (59) E -> . RESTA E
    (32) calls -> . read IZQPAR DERPAR
    (33) calls -> . array IZQPAR DERPAR
    (60) ent -> . INTEGER
    (61) dou -> . DOUBLE
    (63) va -> . VAR arr
    (64) va -> . VAR
    (62) str -> . STR

    abs             shift and go to state 44
    NOT             shift and go to state 46
    BNOT            shift and go to state 47
    IZQPAR          shift and go to state 45
    RESTA           shift and go to state 43
    read            shift and go to state 52
    array           shift and go to state 53
    INTEGER         shift and go to state 54
    DOUBLE          shift and go to state 55
    VAR             shift and go to state 56
    STR             shift and go to state 57

    exp                            shift and go to state 35
    expa                           shift and go to state 36
    expl                           shift and go to state 37
    expra                          shift and go to state 38
    expb                           shift and go to state 39
    casteo                         shift and go to state 40
    E                              shift and go to state 41
    calls                          shift and go to state 42
    ent                            shift and go to state 48
    dou                            shift and go to state 49
    va                             shift and go to state 50
    str                            shift and go to state 51

state 28

    (19) iff -> if IZQPAR . exp DERPAR goto ID
    (22) exp -> . expa
    (23) exp -> . expl
    (24) exp -> . expra
    (25) exp -> . expb
    (26) exp -> . casteo
    (27) exp -> . E
    (28) exp -> . calls
    (50) expa -> . E SUMA E
    (51) expa -> . E RESTA E
    (52) expa -> . E MULTI E
    (53) expa -> . abs IZQPAR E DERPAR
    (54) expa -> . E DIV E
    (34) expl -> . NOT E
    (35) expl -> . E AND E
    (36) expl -> . E OR E
    (37) expl -> . E xor E
    (38) expra -> . E DIGUAL E
    (39) expra -> . E DESIGUAL E
    (40) expra -> . E MAYORIGUAL E
    (41) expra -> . E MENORIGUAL E
    (42) expra -> . E MAYOR E
    (43) expra -> . E MENOR E
    (44) expb -> . BNOT E
    (45) expb -> . E BAND E
    (46) expb -> . E BOR E
    (47) expb -> . E BXOR E
    (48) expb -> . E BLEFT E
    (49) expb -> . E BRIGHT E
    (29) casteo -> . IZQPAR int DERPAR E
    (30) casteo -> . IZQPAR float DERPAR E
    (31) casteo -> . IZQPAR char DERPAR E
    (55) E -> . ent
    (56) E -> . dou
    (57) E -> . va
    (58) E -> . str
    (59) E -> . RESTA E
    (32) calls -> . read IZQPAR DERPAR
    (33) calls -> . array IZQPAR DERPAR
    (60) ent -> . INTEGER
    (61) dou -> . DOUBLE
    (63) va -> . VAR arr
    (64) va -> . VAR
    (62) str -> . STR

    abs             shift and go to state 44
    NOT             shift and go to state 46
    BNOT            shift and go to state 47
    IZQPAR          shift and go to state 45
    RESTA           shift and go to state 43
    read            shift and go to state 52
    array           shift and go to state 53
    INTEGER         shift and go to state 54
    DOUBLE          shift and go to state 55
    VAR             shift and go to state 56
    STR             shift and go to state 57

    exp                            shift and go to state 58
    expa                           shift and go to state 36
    expl                           shift and go to state 37
    expra                          shift and go to state 38
    expb                           shift and go to state 39
    casteo                         shift and go to state 40
    E                              shift and go to state 41
    calls                          shift and go to state 42
    ent                            shift and go to state 48
    dou                            shift and go to state 49
    va                             shift and go to state 50
    str                            shift and go to state 51

state 29

    (18) jump -> goto ID .

    PCOMA           reduce using rule 18 (jump -> goto ID .)


state 30

    (20) printt -> print IZQPAR . va DERPAR
    (63) va -> . VAR arr
    (64) va -> . VAR

    VAR             shift and go to state 56

    va                             shift and go to state 59

state 31

    (12) uns -> unset IZQPAR . va DERPAR
    (63) va -> . VAR arr
    (64) va -> . VAR

    VAR             shift and go to state 56

    va                             shift and go to state 60

state 32

    (14) var2 -> VAR arr .
    (65) arr -> arr . IZQLLAVE E DERLLAVE

    IGUAL           reduce using rule 14 (var2 -> VAR arr .)
    IZQLLAVE        shift and go to state 61


state 33

    (66) arr -> IZQLLAVE . E DERLLAVE
    (55) E -> . ent
    (56) E -> . dou
    (57) E -> . va
    (58) E -> . str
    (59) E -> . RESTA E
    (60) ent -> . INTEGER
    (61) dou -> . DOUBLE
    (63) va -> . VAR arr
    (64) va -> . VAR
    (62) str -> . STR

    RESTA           shift and go to state 43
    INTEGER         shift and go to state 54
    DOUBLE          shift and go to state 55
    VAR             shift and go to state 56
    STR             shift and go to state 57

    E                              shift and go to state 62
    ent                            shift and go to state 48
    dou                            shift and go to state 49
    va                             shift and go to state 50
    str                            shift and go to state 51

state 34

    (4) linst -> linst inst PCOMA .

    if              reduce using rule 4 (linst -> linst inst PCOMA .)
    goto            reduce using rule 4 (linst -> linst inst PCOMA .)
    print           reduce using rule 4 (linst -> linst inst PCOMA .)
    exit            reduce using rule 4 (linst -> linst inst PCOMA .)
    unset           reduce using rule 4 (linst -> linst inst PCOMA .)
    VAR             reduce using rule 4 (linst -> linst inst PCOMA .)
    ID              reduce using rule 4 (linst -> linst inst PCOMA .)
    main            reduce using rule 4 (linst -> linst inst PCOMA .)
    $end            reduce using rule 4 (linst -> linst inst PCOMA .)


state 35

    (13) asignacion -> var2 IGUAL exp .

    PCOMA           reduce using rule 13 (asignacion -> var2 IGUAL exp .)


state 36

    (22) exp -> expa .

    PCOMA           reduce using rule 22 (exp -> expa .)
    DERPAR          reduce using rule 22 (exp -> expa .)


state 37

    (23) exp -> expl .

    PCOMA           reduce using rule 23 (exp -> expl .)
    DERPAR          reduce using rule 23 (exp -> expl .)


state 38

    (24) exp -> expra .

    PCOMA           reduce using rule 24 (exp -> expra .)
    DERPAR          reduce using rule 24 (exp -> expra .)


state 39

    (25) exp -> expb .

    PCOMA           reduce using rule 25 (exp -> expb .)
    DERPAR          reduce using rule 25 (exp -> expb .)


state 40

    (26) exp -> casteo .

    PCOMA           reduce using rule 26 (exp -> casteo .)
    DERPAR          reduce using rule 26 (exp -> casteo .)


state 41

    (27) exp -> E .
    (50) expa -> E . SUMA E
    (51) expa -> E . RESTA E
    (52) expa -> E . MULTI E
    (54) expa -> E . DIV E
    (35) expl -> E . AND E
    (36) expl -> E . OR E
    (37) expl -> E . xor E
    (38) expra -> E . DIGUAL E
    (39) expra -> E . DESIGUAL E
    (40) expra -> E . MAYORIGUAL E
    (41) expra -> E . MENORIGUAL E
    (42) expra -> E . MAYOR E
    (43) expra -> E . MENOR E
    (45) expb -> E . BAND E
    (46) expb -> E . BOR E
    (47) expb -> E . BXOR E
    (48) expb -> E . BLEFT E
    (49) expb -> E . BRIGHT E

    PCOMA           reduce using rule 27 (exp -> E .)
    DERPAR          reduce using rule 27 (exp -> E .)
    SUMA            shift and go to state 63
    RESTA           shift and go to state 64
    MULTI           shift and go to state 65
    DIV             shift and go to state 66
    AND             shift and go to state 67
    OR              shift and go to state 68
    xor             shift and go to state 69
    DIGUAL          shift and go to state 70
    DESIGUAL        shift and go to state 71
    MAYORIGUAL      shift and go to state 72
    MENORIGUAL      shift and go to state 73
    MAYOR           shift and go to state 74
    MENOR           shift and go to state 75
    BAND            shift and go to state 76
    BOR             shift and go to state 77
    BXOR            shift and go to state 78
    BLEFT           shift and go to state 79
    BRIGHT          shift and go to state 80


state 42

    (28) exp -> calls .

    PCOMA           reduce using rule 28 (exp -> calls .)
    DERPAR          reduce using rule 28 (exp -> calls .)


state 43

    (59) E -> RESTA . E
    (55) E -> . ent
    (56) E -> . dou
    (57) E -> . va
    (58) E -> . str
    (59) E -> . RESTA E
    (60) ent -> . INTEGER
    (61) dou -> . DOUBLE
    (63) va -> . VAR arr
    (64) va -> . VAR
    (62) str -> . STR

    RESTA           shift and go to state 43
    INTEGER         shift and go to state 54
    DOUBLE          shift and go to state 55
    VAR             shift and go to state 56
    STR             shift and go to state 57
